--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,7 @@
 body {
     background-image:url("https://www.redwolf.in/image/catalog/artwork-Images/phone-covers/mobgotsigpatt.jpg");
 }
+
+#QuestionsAnswers {
+    text-align: left;
+}
